working on IE fixes

--- a/public/docs/css/sass/screen.scss
+++ b/public/docs/css/sass/screen.scss
@@ -297,11 +297,12 @@ section#colophon h2 {
       width: 570px;
       height: 380px;
       overflow: hidden;
+      zoom: 1;
     }
 
     ul > * {
-      width: 100%;
-      height: 100%;
+      width: 570px;
+      height: 380px;
     }
 
     figcaption {
@@ -310,6 +311,7 @@ section#colophon h2 {
       right: 0;
       top: 0;
       z-index: 100;
+      zoom: 1;
 
       h3 {
         text-transform: uppercase;
